Initialized new commit files

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html> 
-  <html lang="en">
-    <head>
-      <meta name="description" content="A restaurant that serves you the best mediterranean foods."/>
-      <meta name="og:title" content="Little Lemon Restaurant"/>
-      <meta name="og:description" content="The Little Lemon Restaurant is a mediterranean0style place with dishes from all sorts of styles and flavors."/>
-      <meta name="og:image" content=""/>
-    </head>
-    <body>
- 
-    </body>
-  </html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="description" content="A restaurant that serves the best Mediterranean food." />
+    <meta property="og:title" content="Little Lemon Restaurant" />
+    <meta property="og:description" content="The Little Lemon Restaurant is a Mediterranean-style place with rich flavors." />
+    <meta property="og:image" content="" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
