--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta property="og:title" content="Little Lemon Restaurant" />
     <meta property="og:description" content="The Little Lemon Restaurant is a Mediterranean-style place with rich flavors." />
     <meta property="og:image" content="" />
+    <title>Little Lemon Restaurant</title>
   </head>
   <body>
     <div id="root"></div>
